--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,3 +16,6 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Europe/London
